aligned to required domain creating a game